syntax = "proto3";
package services;
option go_package = "../;feed";

message DouyinFeedRequest {
  // @gotags: json:"latest_time"
  int64 LatestTime = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  // @gotags: json:"token"
  string Token = 2; // 可选参数，登录用户设置
}

message DouyinFeedResponse {
  // @gotags: json:"status_code"
  int32 StatusCode = 1; // 状态码，0-成功，其他值-失败
  // @gotags: json:"status_msg"
  string StatusMsg = 2; // 返回状态描述
  // @gotags: json:"video_list"
  repeated Video VideoList = 3; // 视频列表
  // @gotags: json:"next_time"
  int64 NextTime = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message Video {
  // @gotags: json:"id"
  int64 Id = 1; // 视频唯一标识
  // @gotags: json:"author"
  User Author = 2; // 视频作者信息
  // @gotags: json:"play_url"
  string PlayUrl = 3; // 视频播放地址
  // @gotags: json:"cover_url"
  string CoverUrl = 4; // 视频封面地址
  // @gotags: json:"favorite_count"
  int64 FavoriteCount = 5; // 视频的点赞总数
  // @gotags: json:"comment_count"
  int64 CommentCount = 6; // 视频的评论总数
  // @gotags: json:"is_favorite"
  bool IsFavorite = 7; // true-已点赞，false-未点赞
  // @gotags: json:"title"
  string Title = 8; // 视频标题
}

message User {
  // @gotags: json:"id"
  int64 Id = 1; // 用户id
  // @gotags: json:"name"
  string Name = 2; // 用户名称
  // @gotags: json:"follow_count"
  int64 FollowCount = 3; // 关注总数
  // @gotags: json:"follower_count"
  int64 FollowerCount = 4; // 粉丝总数
  // @gotags: json:"is_follow"
  bool IsFollow = 5; // true-已关注，false-未关注
  // @gotags: json:"avatar"
  string Avatar = 6; //用户头像
  // @gotags: json:"background_image"
  string BackgroundImage = 7; //用户个人页顶部大图
  // @gotags: json:"signature"
  string Signature = 8; //个人简介
  // @gotags: json:"total_favorited"
  int64 TotalFavorited = 9; //获赞数量
  // @gotags: json:"work_count"
  int64 WorkCount = 10; //作品数量
  // @gotags: json:"favorite_count"
  int64 FavoriteCount = 11; //点赞数量
}

service FeedService{
  rpc Feed(DouyinFeedRequest) returns (DouyinFeedResponse);
}